# torch4ios

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_ios_framework
cmake/: iOSTorch.cmake
framework/: Torch.h  Torch.m
